# graph-tally

./: .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  Dockerfile.tap_aggregator  README.md  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  release_please.yml  tests.yml
crates/aggregator/: CHANGELOG.md  Cargo.toml  README.md
crates/aggregator/proto/: graph_tally.proto
crates/aggregator/src/: aggregator.rs  error_codes.rs  grpc.rs  lib.rs  main.rs  server.rs
crates/aggregator/tests/: aggregate_test.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: error.rs  lib.rs  rav_request.rs  receipt.rs  signed_message.rs
crates/core/src/manager/: mod.rs  tap_manager.rs
crates/core/src/manager/adapters/: mod.rs  signature.rs
crates/core/src/manager/context/: memory.rs  mod.rs
crates/core/tests/: manager_test.rs  rav_test.rs  receipt_test.rs  received_receipt_test.rs
crates/core/tests/snapshots/: rav_test__check_for_rav_serialization-2.snap  rav_test__check_for_rav_serialization.snap
crates/eip712_message/: CHANGELOG.md  Cargo.toml
crates/eip712_message/src/: lib.rs
crates/graph/: CHANGELOG.md  Cargo.toml
crates/graph/src/: lib.rs  rav.rs  receipt.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/tests/: indexer_mock.rs  showcase.rs
crates/receipt/: CHANGELOG.md  Cargo.toml
crates/receipt/src/: checks.rs  error.rs  lib.rs  rav.rs  received_receipt.rs
docker/: Dockerfile.graph_tally_aggregator  Dockerfile.graph_tally_escrow_manager
grafana/: escrow_manager.json
tap_aggregator/: CHANGELOG.md  Cargo.toml  README.md  build.rs
tap_aggregator/proto/: tap_aggregator.proto  uint128.proto  v2.proto
tap_aggregator/src/: aggregator.rs  api_versioning.rs  error_codes.rs  grpc.rs  jsonrpsee_helpers.rs  lib.rs  main.rs  metrics.rs  protocol_mode.rs  receipt_classifier.rs  server.rs
tap_aggregator/src/aggregator/: v1.rs  v2.rs
tap_aggregator/tests/: aggregate_test.rs  aggregate_v1_and_v2.rs
tap_core/: CHANGELOG.md  Cargo.toml
tap_core/src/: error.rs  lib.rs  rav_request.rs  receipt.rs  signed_message.rs
tap_core/src/manager/: mod.rs  tap_manager.rs
tap_core/src/manager/adapters/: mod.rs  rav.rs  receipt.rs
tap_core/src/manager/context/: memory.rs
tap_core/tests/: manager_test.rs  rav_test.rs  receipt_test.rs  received_receipt_test.rs
tap_core/tests/snapshots/: rav_test__check_for_rav_serialization-2.snap  rav_test__check_for_rav_serialization.snap
tap_eip712_message/: Cargo.toml
tap_eip712_message/src/: lib.rs
tap_graph/: CHANGELOG.md  Cargo.toml
tap_graph/src/: lib.rs  rav.rs  receipt.rs  v1.rs
tap_graph/src/v1/: rav.rs  receipt.rs
tap_graph/src/v2/: rav.rs  receipt.rs
tap_integration_tests/: Cargo.toml
tap_integration_tests/tests/: indexer_mock.rs  showcase.rs
tap_receipt/: CHANGELOG.md  Cargo.toml
tap_receipt/src/: checks.rs  error.rs  lib.rs  rav.rs  state.rs
