[package]
name = "graph_tally_core"
version = "6.0.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Graph Tally library: a fast, efficient and trustless unidirectional micro-payments system."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
graph_tally_eip712_message = { path = "../eip712_message" }
graph_tally_graph = { path = "../graph", optional = true }
graph_tally_receipt = { path = "../receipt" }
thegraph-core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
default = ["in_memory"]
in_memory = ["dep:graph_tally_graph"]
