[package]
name = "graph_tally_graph"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The Graph Tally receipt structs"

[dependencies]
rand.workspace = true
serde.workspace = true
graph_tally_eip712_message.workspace = true
graph_tally_receipt.workspace = true
thegraph-core.workspace = true

[dev-dependencies]
rstest.workspace = true
