[package]
name = "graph_tally_receipt"
version = "1.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph Tally Receipt states and checks"

[dependencies]
anyhow.workspace = true
anymap3.workspace = true
async-trait.workspace = true
serde.workspace = true
graph_tally_eip712_message = { path = "../eip712_message" }
thegraph-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
